--- a/LogIn_Page2/index.html
+++ b/LogIn_Page2/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Log In Page </title>
+  <link href="images/shortcut.ico" rel="shortcut icon">
+  <title>Responsive login css3 html5</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -11,8 +12,7 @@
   <div class="container">
     <div class="box">
       <div class="top">
-        <div class="logo">
-        </div>
+      
       </div>
       <div class="form">
         <div class="input-container">
@@ -25,7 +25,8 @@
           <label for="#{label}">Password</label>
           <div class="bar"></div>
         </div>
-        <div class="button-container">
+        <div class="button-con
+        tainer">
           <a href="#"><span>Sign In</span></a>
         </div>
         <div class="footer"><a href="#">Don't have an account? Register here!</a></div>
