--- a/LogIn_Page2/index.html
+++ b/LogIn_Page2/index.html
@@ -17,7 +17,7 @@
       <div class="form">
         <div class="input-container">
           <input type="text" id="#{label}" required="required"/>
-          <label for="#{label}">Username</label>
+          <label for="#{label}">Email</label>
           <div class="bar"></div>
         </div>
         <div class="input-container">
@@ -27,7 +27,7 @@
         </div>
         <div class="button-con
         tainer">
-          <a href="#"><span>Sign In</span></a>
+          <a href="#"><span onclick="userLogin()">Sign In</span></a>
         </div>
         <div class="footer"><a href="#">Don't have an account? Register here!</a></div>
       </div>
