profile page for parent

--- a/Profile Page Parent/profilePageParent.html
+++ b/Profile Page Parent/profilePageParent.html
@@ -22,6 +22,9 @@
   <label for="photo">Photo Link:</label><br>
   <input type="text" id="photo" name="photo" value=""><br>
 
+  <label for="family_name">Family Name (Mum & Dad's Last Name):</label><br>
+  <input type="text" id="family_name" name="family_name" value=""><br>
+
   <label for="department">School Of:</label><br>
   <select id="department: ">
     <option value="art">Arts</option>
