--- a/front-end/index2.html
+++ b/front-end/index2.html
@@ -17,23 +17,28 @@
     <h1>Raisin A Family</h1>
   </header>
   <section>
-    <div class="cardcontainer list">
+    <div class="cardcontainer list" id="card">
 
-      <ul class="cardlist">
-        <li class="card current"><img src="images/photo1.png" alt="card1"></li>
-        <li class="card"><img src="images/photo2.jpg" alt="card2"></li>
+      <!-- <ul class="cardlist"> -->
+        <!-- <li class="card current"><img src="images/photo1.png" alt="card1"></li> -->
+        <!-- <li class="card"><img src="images/photo2.jpg" alt="card2"></li>
         <li class="card"><img src="images/photo3.png" alt="card3"></li>
         <li class="card"><img src="images/photo4.jpeg" alt="card4"></li>
         <li class="card"><img src="images/photo5.png" alt="card5"></li>
-      </ul>
+        <li class="card"><img src="images/photo1.jpg" alt="card6"></li>
+        <li class="card"><img src="images/photo1.png" alt="card7"></li>
+        <li class="card"><img src="images/photo1.jpeg" alt="card8"></li>
+        <li class="card"><img src="images/photo1.png" alt="card9"></li>
+        <li class="card"><img src="images/photo1.png" alt="card10"></li> -->
+      <!-- </ul> -->
 
-      <ul class="card current">
-
-        <li>Criteria 1</li>
-        <li>Criteria 2</li>
-        <li>Criteria 3</li>
-        <li>Criteria 4</li>
-        <li>Criteria 5</li>
+      <ul class="card current" id="current_card">
+        <li><img id="card_image" src="images/photo1.png" alt="card1"></li>
+        <li id="Criteria 1">Criteria 1</li>
+        <li id="Criteria 2">Criteria 2</li>
+        <li id="Criteria 3">Criteria 3</li>
+        <li id="Criteria 4">Criteria 4</li>
+        <li id="Criteria 5">Criteria 5</li>
 
 
       </ul>
@@ -51,6 +56,7 @@
 
   <script src="cardswipes.js"></script>
   <script src="swipecard.js"></script>
+  <script src="Client.js"></script>
   
 </body>
 
