added login functionality

--- a/front-end/index2.html
+++ b/front-end/index2.html
@@ -54,10 +54,10 @@
   </section>
 
 
-  <script src="cardswipes.js"></script>
-  <script src="swipecard.js"></script>
+  <!-- <script src="cardswipes.js"></script>
+  <script src="swipecard.js"></script> -->
   <script src="Client.js"></script>
-  
+
 </body>
 
 </html>
