Still broken cards page

--- a/front-end/index2.html
+++ b/front-end/index2.html
@@ -45,8 +45,8 @@
 
 
 
-      <button class="but-nope">X</button>
-      <button class="but-yay">✔</button>
+      <button id="but-nope">X</button>
+      <button id="but-yay">✔</button>
       <span id="counter"></span>
     </div>
     <ul class="cardlist" id="results">
