signup function added

--- a/Profile Page Child/profilePageChild.html
+++ b/Profile Page Child/profilePageChild.html
@@ -8,7 +8,7 @@
 
 <h2>Profile Creation Page</h2>
 
-<form>
+<form onsubmit="signUp()">
   
   <label for="email">Email Address:</label><br>
   <input type="text" id="email" name="email" value=""><br>
