CSS/HTML changes for design

--- a/LogIn_Page2/index.html
+++ b/LogIn_Page2/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="images/shortcut.ico" rel="shortcut icon">
-  <title>Responsive login css3 html5</title>
+  <title>Raisin-A-Family! Log In Page</title>
   <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
-
+ 
 <body>
   <div class="container">
     <div class="box">
@@ -25,11 +25,11 @@
           <label for="passwordInput">Password</label>
           <div class="bar"></div>
         </div>
-        <div class="button-con
-        tainer">
-          <a href="#"><span onclick="userLogin()">Sign In</span></a>
+        <div class="button-container">
+          <a href="#"><span onclick="userLogin()"><center>Sign In</center>
+          </span></a>
         </div>
-        <div class="footer"><a href="#">Don't have an account? Register here!</a></div>
+        <div class="footer"><a href="#">No account? Sign up here!</a></div>
       </div>
     </div>
   </div>
