slight change to index2.html

--- a/Profile_Page_Child/profilePageChild.html
+++ b/Profile_Page_Child/profilePageChild.html
@@ -23,7 +23,7 @@
   <input type="text" id="photo" name="photo" value=""><br>
 
   <label for="department">School Of:</label><br>
-  <select id="department: ">
+  <select id="department">
     <option value="art">Arts</option>
     <option value="science">Science</option>
     <option value="medicine">Medicine</option>
@@ -55,7 +55,7 @@
   <label for="alcohol"> Do you drink alcohol?</label><br>
 
   <label for="number_children">Desired number of children in family:</label>
-  <input type="text" name="number_children" pattern="[1-20]" title="number_children" />
+  <input type="text" id="number_children" title="number_children" />
   <br>
 
   <input type="submit"  value="Submit">
