fixed html merge conflicts

--- a/Profile_Page_Child/profilePageChild.html
+++ b/Profile_Page_Child/profilePageChild.html
@@ -43,7 +43,7 @@
 
 								<div class = "form-group text-white">
 								<label for="department">School of:</label><br>
-								<select id="department: " class = form-control  required autofocus>
+								<select id="department" class = form-control  required autofocus>
 									<option value="art">Arts</option>
 									<option value="science">Science</option>
 									<option value="medicine">Medicine</option>
@@ -53,7 +53,7 @@
 
 							<div class = "form-group text-white">
 							<label for="interests">Interests:</label><br>
-							<select id="interests: " class = form-control required autofocus>
+							<select id="interests" class = form-control required autofocus>
 								<option value="sports">Sports</option>
 								<option value="art">Art</option>
 								<option value="music">Music</option>
@@ -66,7 +66,7 @@
 
 						<div class = "form-group text-white">
 						<label for="night">Nightlife:</label><br>
-						<select id="night: " class = form-control required autofocus>
+						<select id="night" class = form-control required autofocus>
 							<option value="601_bop">601 Club Night</option>
 							<option value="pot_luck_dinner">Potluck Dinners</option>
 							<option value="family_pres">Family Pres</option>
@@ -82,7 +82,7 @@
 
 					<div class = "form-group text-white">
 						<label for="number_children">Desired number of children in family:</label>
-						<input type="text" name="number_children" pattern="[1-20]" title="number_children" class = form-control required autofocus/><br>
+						<input type="text" id="number_children" pattern="[1-20]" title="number_children" class = form-control required autofocus/><br>
 					</div>
 
 
@@ -101,4 +101,4 @@
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src="js/my-login.js"></script>
+	<script src="Client.js"></script>
