--- a/Profile_Page_Parent/profilePageParent.html
+++ b/Profile_Page_Parent/profilePageParent.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<div class="header">
-  <h1><center>Raisin-A-Family!</center></h1>
+  <h1><center>Raisin-A-Family</center></h1>
 	</div>
 	<title>Raisin-A-Family! Set Up Your Profile</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
